cleaned file so we only have what we need

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@
 *.exe
 *.out
 *.app
+/Saved
+/Intermediate
+/Binaries
+/.vs
+/ProjectCougar.sln
+/Content/Developers
+/Content/Collections
+/Plugins/GameLiftClientSDK/*
+/Plugins/GameLiftServerSDK/*
+/Plugins/GameLiftServerSDK/*
